devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <SERVICE>-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 20M
    nginx.ingress.kubernetes.io/gzip: "true"
    nginx.ingress.kubernetes.io/gzip-types: "text/plain application/javascript application/x-javascripttext/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png image/x-icon;"
spec:
  rules:
    - host: <WEB_HOST>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <SERVICE>-svc
                port:
                  name: <SERVICE>
